--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <form action="" method="get">
         <input id="serchGif">
-        <button type="submit">Поиск</button>
+        <button type="submit" onclick="findGif()">Поиск</button>
     </form>
+    
+    <img  src="" type="gif" alt="Animated Gif image" />
+    
     <div id="firstGif"></div>
     <div id="secondGif"></div>
     <div id="thirdGif"></div>
