--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>W21-T1-findGif()</title>
 </head>
 <body>
-    <form action="" method="get">
-        <input id="serchGif">
-        <button type="submit" onclick="findGif()">Поиск</button>
-    </form>
-    
-    <img  src="" type="gif" alt="Animated Gif image" />
-    
-    <div id="firstGif"></div>
-    <div id="secondGif"></div>
-    <div id="thirdGif"></div>
-    <div id="fourthGif"></div>
-    <div id="fifthGif"></div>
+    <div id="container">
+        <input type="text" id="serchGif" />
+        <button type="submit" onclick="findGif()">Поиск гивок</button>
+    </div>
     <script src="index.js" ></script>
 </body>
 </html>
